swiper fix catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
     <link rel="preload" href="font/playfairdisplay-black-webfont.woff" as="font">
     <link rel="stylesheet" href="css/choices.min.css">
     <link rel="stylesheet" href="css/nouislider.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -541,7 +541,7 @@
         <div class="footer-bottom flex"><span class="footer__copyright link-grey ui-link">SDP&#174;   2011-2021</span></div>
       </footer>
     </div>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
     <script src="js/choices.min.js"></script>
     <script src="js/nouislider.min.js"></script>
