swiper fix product.html

--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
     <link rel="preload" href="font/OpenSans-SemiBoldItalic.woff" as="font">
     <link rel="preload" href="font/playfairdisplay-black-webfont.woff" as="font">
     <link rel="stylesheet" href="css/choices.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
@@ -487,9 +487,8 @@
       </footer>
     </div>
     <script>
-      <const>validate = new window.JustValidate('#formProduct');</const>
     </script>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@latest/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
     <script src="js/choices.min.js"></script>
     <script src="js/header-top__select.min.js"></script>
